Additional ToC dark mode color fixes

--- a/resources/components/darkmode.less
+++ b/resources/components/darkmode.less
@@ -165,6 +165,8 @@
 	.mw-header-menu-drawer-container .mw-nav-links a,
 	.mw-header-menu-drawer-container .mw-user-links a,
 	.mw-body-content #mw-content-text .mw-parser-output #toc a:hover,
+	.mw-body-content #mw-content-text .mw-parser-output #toc li.active a,
+	.mw-body-content #mw-content-text .mw-parser-output #toc li.active li,
 	.suggestion-description {
 		color: @dark-text-80 !important;
 	}
